# ChangeLog for xfce-base/xfconf
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xfconf-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org> +xfconf-4.5.92.ebuild,
  xfconf-9999.ebuild:
  Xfce-4.6 Beta 2 bump

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> xfconf-9999.ebuild:
  Remove unneeded inherit flag-o-matic

  16 Sep 2008; Christoph Mende <angelos@gentoo.org> xfconf-9999.ebuild:
  Removed gtk+ dependency and --enable-xkb

  14 Sep 2008; Christoph Mende <angelos@gentoo.org> xfconf-9999.ebuild:
  Removed --as-needed filter

  31 Jul 2008; Christoph Mende <angelos@gentoo.org> xfconf-9999.ebuild:
  Updated dependencies

  23 Jun 2008; Christoph Mende <angelos@gentoo.org> xfconf-9999.ebuild:
  Copied keywords from xfce-mcs-manager

  23 Jun 2008; Christoph Mende <angelos@gentoo.org> +xfconf-9999.ebuild:
  Initial import
