@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfconf-4.5.92.tar.bz2 402587 RMD160 6f6e6f900117de52cf5063def696d90259918913 SHA1 7ecd517526c9b7d1c5c92f1d471eef4d1f35929b SHA256 e3dbf570371ceff2b3e63a465994b198a7483a621e6454b04a1f07296163b746
-EBUILD xfconf-4.5.92.ebuild 445 RMD160 917db88aab45b95cb88df4889660346b0396e73f SHA1 ada1df0a1ec909d45b148740c5dcd73a657dbe90 SHA256 c58511ed565bd18f7e3dc4df3a797ea78e18345bd580ca6bba802358789c3c70
-EBUILD xfconf-9999.ebuild 445 RMD160 917db88aab45b95cb88df4889660346b0396e73f SHA1 ada1df0a1ec909d45b148740c5dcd73a657dbe90 SHA256 c58511ed565bd18f7e3dc4df3a797ea78e18345bd580ca6bba802358789c3c70
-MISC ChangeLog 898 RMD160 723ebba470fc0c4ac080b542a6ba4e641aa5ba78 SHA1 121eb07eb9042b275a243b16d9ed96ddf43b66a9 SHA256 e0cb707ece3312c97b615859272577d4f04b105a91782ccd717da3ffd31e3cbd
+EBUILD xfconf-4.5.92.ebuild 556 RMD160 47def5db46289cdabce95ac452efdaacd246e730 SHA1 a380e754de52aaae2c8a27723305040df17f1895 SHA256 8e88ab0b113c845637569295664521a5b8b5c0d38b59cdffb9c78a1c2a659953
+EBUILD xfconf-9999.ebuild 578 RMD160 cd8360a988f0c6df9b009cbcdb0f62c4fcca04f6 SHA1 4d2cd45998a8e44088719cd743c693480e3f4704 SHA256 9ebb590af46a76ab021bf8ddb8a55ea06444fe81dee9bc433b53df173effe479
+MISC ChangeLog 1011 RMD160 41a620edbb0b2f2952f8f350279bf26a83a1f004 SHA1 f4aa2354d222d410c493381aeb39dbbf8abe05f1 SHA256 d101e0ad3f90da8df6b01c9bed1af0dd32cf20b57b21443722401674f5cdf6c6
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdtlwACgkQKhnDs22gwa8xzACgnBIXqWlL3UTZEj0VH06Uy54o
-RawAoOze6ADFlC7RXJlUNW5k9YggCr7n
-=Ufny
+iEYEARECAAYFAklK3R4ACgkQKhnDs22gwa+DUACg/YpnCOfDOgD94u8BIw9KOwTW
+BdMAniAE+iEMH/KLtntzGgwBjg+VOoXx
+=mz4d
 -----END PGP SIGNATURE-----
