@@ -10,10 +10,18 @@ xfce4_core
 
 DESCRIPTION="Xfce configuration daemon and utilities"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
-IUSE="debug"
+IUSE="debug doc"
 
 RDEPEND=">=dev-libs/dbus-glib-0.72
 	>=dev-libs/glib-2.12:2
 	>=xfce-base/libxfce4util-${XFCE_VERSION}"
+DEPEND="${RDEPEND}
+	doc? ( dev-util/gtk-doc )"
+
+WANT_GTKDOCIZE="yes"
+
+pkg_setup() {
+	XFCE_CONFIG+=" $(use_enable doc gtk-doc)"
+}
 
 DOCS="AUTHORS ChangeLog NEWS README TODO"
